Converted dropper to shellcode and added RCE in d8

--- a/dropper/Makefile
+++ b/dropper/Makefile
@@ -3,6 +3,9 @@ CFLAGS=-I ./includes -Wall -Werror
 
 dropper: dropper.c
 	mkdir -p bin
+	as dropper.S -o bin/dropper.o
+	objcopy -O binary -j .text bin/dropper.o bin/dropper.bin
+
 	$(CC) -o ./bin/dropper dropper.c $(CFLAGS)
 
 clean:
